deleted unecessary svg files. added process pics. styled process. added images for survey

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>The Graphic Jar</title>
     <meta charset="UTF-8">
+    <!-- favicon -->
+    <link rel="shortcut icon" type="image/ico" href="assets/favicon/favicon.ico"/>
     <!-- <meta http-equiv="refresh" content="5"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
@@ -80,9 +82,7 @@
             <div class="process-step">
               <img class="process-step-num" src="assets/svg/process_num1.svg" alt="process_num1">
               <div class="process-step-title">
-                <p>Choose</p>
-                <p>Your</p>
-                <p>Project</p>
+                <p>Choose Project</p>
               </div>
             </div>
           </div>
@@ -94,7 +94,7 @@
         </div>
         <div class="process-column">
           <div class="process-box process-box-1c">
-            <img src="assets/svg/step1.svg" alt="projects">
+            <img src="assets/svg/process_pic1.svg" alt="projects">
           </div>
         </div>
       </div>
@@ -104,9 +104,7 @@
             <div class="process-step">
               <img class="process-step-num" src="assets/svg/process_num2.svg" alt="process_num2">
               <div class="process-step-title">
-                <p>Fill</p>
-                <p>Out Our</p>
-                <p>Survey</p>
+                <p>Fill Out Survey</p>
               </div>
             </div>
           </div>
@@ -118,7 +116,7 @@
         </div>
         <div class="process-column">
           <div class="process-box process-box-2c">
-            
+            <img src="assets/svg/process_pic2.svg" alt="survey">
           </div>
         </div>
       </div>
@@ -126,13 +124,9 @@
         <div class="process-column">
           <div class="process-box process-box-3a">
             <div class="process-step">
-              <div class="process-step-num">
-                3
-              </div>
+              <img class="process-step-num" src="assets/svg/process_num3.svg" alt="process_num3">
               <div class="process-step-title">
-                <p>Submit</p>
-                <p>And</p>
-                <p>Sit Back</p>
+                <p>Send and Wait</p>
               </div>
             </div>
           </div>
@@ -144,7 +138,7 @@
         </div>
         <div class="process-column">
           <div class="process-box process-box-3c">
-            
+            <p>Submit</p>
           </div>
         </div>
       </div>
@@ -311,7 +305,7 @@
     </section>
     <footer class="footer">
       <div class="footer-info">
-        <img class="footer-image" src="assets/svg/tgj_logo.svg">
+        <img class="footer-image" src="assets/svg/tgj_new_logo(white).svg">
         <div class="footer-link"><a href="##">About Us</a></div>
         <div class="footer-link"><a href="##">Terms and Agreement</a></div>
         <div class="footer-link"><a href="##">More FAQ</a></div>
