condensed code for process by adding classes for similar tags.

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
         </div>
         <div class="process-column">
           <div class="process-box process-box-1b">
-            <p>We provide a variety of projects for you to choose from. Is there something you need but we don't have? No problem. Go to the survey and click the "Other" option.</p>
+            <p class="process-box-desc">We provide a variety of projects for you to choose from. Is there something you need but we don't have? No problem. Go to the survey and click the "Other" option.</p>
           </div>
         </div>
         <div class="process-column">
           <div class="process-box process-box-1c">
-            <img src="assets/svg/process_pic1.svg" alt="projects">
+            <img class="process-box-img" src="assets/svg/process_pic1.svg" alt="projects">
           </div>
         </div>
       </div>
@@ -111,12 +111,12 @@
         </div>
         <div class="process-column">
           <div class="process-box process-box-2b">
-            <p>We have spent countless hours to create an easy to use process where you can tell us exactly what you want for your project. Don't know what to say? No worries! You can tell us all about it either in person or over the phone when we contact you.</p>
+            <p class="process-box-desc">We have spent countless hours to create an easy to use process where you can tell us exactly what you want for your project. Don't know what to say? No worries! You can tell us all about it either in person or over the phone when we contact you.</p>
           </div>
         </div>
         <div class="process-column">
           <div class="process-box process-box-2c">
-            <img src="assets/svg/process_pic2.svg" alt="survey">
+            <img class="process-box-img" src="assets/svg/process_pic2.svg" alt="survey">
           </div>
         </div>
       </div>
@@ -133,7 +133,7 @@
         </div>
         <div class="process-column">
           <div class="process-box process-box-3b">
-            <p>That's it! You're done. We have received everything that you have filled out. Gives us some time to look over your information and we'll contact you either via email or phone within a one or two business days.</p>
+            <p class="process-box-desc">That's it! You're done. We have received everything that you have filled out. Gives us some time to look over your information and we'll contact you either via email or phone within a one or two business days.</p>
           </div>
         </div>
         <div class="process-column">
