created media queries for all sections besides process to make responsive

--- a/contact.html
+++ b/contact.html
@@ -14,14 +14,19 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500|Source+Sans+Pro" rel="stylesheet">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <!-- navigation bar -->
     <header>
-      <nav>
+      <nav class="nav">
         <div class="nav-main-name">
           <a href="index.html"><img src="assets/svg/tgj_new_logo(white).svg" class="tgj-logo" alt="tgj_logo"></a>
           <h1><a href="index.html">the <span>graphic</span> jar</a></h1>
+        </div>
+        <div class="nav-icon">
+          <i class="fa fa-bars"></i>
         </div>
         <div class="design-button" id="nav-button">
         </div>
