changed process design to a simpler one and made it responsive. changed button size in navbar to be smaller on mobile.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- welcome section -->
     <main class="main-intro">
       <div class="main-intro-info">
-        <h2>Create designs fun<br> and effortlessly.</h2>
+        <h2>Create designs fun and effortlessly.</h2>
         <p>The Graphic Jar is here to turn your ideas into reality.</p>
         <div class="design-button" id="intro-button">
           <button class="start-design"><span>Start Design</span></button>
@@ -87,8 +87,21 @@
         </div>
       </div>
     </section>
+    <section class="process2">
+      <div class="process2-column process2-column-1">
+        <p class="process2-header">How to Create Your Project Easily</p>
+      </div>
+      <div class="process2-column process2-column-2">
+        <p class="process2-title">Create a project with TGJ's free project builder in 3 easy steps.</p>
+        <p class="process2-steps">1. Starting a project with us is easy. Just click on "Start Design" up top to begin.</p>
+        <p class="process2-steps">2. We have several projects for you to pick from. If there's something you need but we don't have, just choose the "other" option.</p>
+        <p class="process2-steps">3. Customize your project by choosing how complex you'd like it as well as the color scheme if you have one. Don't worry, it's optional.</p>
+        <p class="process2-steps">4. Add some information about the project and yourself. We'd like to know as much information as we can to give you the best possible experience.</p>
+        <p class="process2-steps">5. Once you submit then you're done. You can also add more projects if needed. Some of your information will still be there so you don't have to re-type them.</p>
+      </div>
+    </section>
     <!-- 3 step process -->
-    <section class="process">
+<!--     <section class="process">
       <div class="row">
         <div class="process-column">
           <div class="process-box process-box-1a">
@@ -155,7 +168,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- FAQ -->
     <section class="faq">
       <div>
