testing font issuses

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </div>
     </section>
     <!-- 3 step process -->
-<!--     <section class="process">
+    <section class="process">
       <div class="row">
         <div class="process-column">
           <div class="process-box process-box-1a">
@@ -168,7 +168,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- FAQ -->
     <section class="faq">
       <div>
