added custom font of monsterrat. deleted google font link.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     <!-- External CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/clientss.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500|Source+Sans+Pro" rel="stylesheet">
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
@@ -58,7 +56,7 @@
       <div class="who-desc">
         <p class="who-desc-title">Easy. Fun. Unique.</p>
         <p class="who-desc-info">We are a dedicated group of designers, illustrators, and photographers who make it our mission to enrich lives through creativity and design. Whether it be an entire branding project or a simple illustration, we do it all.</p>
-        <a href="#" class="learn-more">Learn more</a>
+        <!-- <a href="#" class="learn-more">Learn more</a> -->
       </div>
     </section>
     <!-- why we are different -->
@@ -101,7 +99,7 @@
       </div>
     </section>
     <!-- 3 step process -->
-    <section class="process">
+<!--     <section class="process">
       <div class="row">
         <div class="process-column">
           <div class="process-box process-box-1a">
@@ -168,11 +166,11 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- FAQ -->
     <section class="faq">
       <div>
-        <img src="assets/svg/faq_title.svg" alt="faq_title">
+        <p class="faq-header">FAQ</p>
       </div>
       <div class="faq-column">
         <div class="faq-card">
