deleted unecessary svg and jpg files. as well as css files not include style. added images for why we different sec. changed sizing of testimonial for mobile.

--- a/index.html
+++ b/index.html
@@ -63,21 +63,21 @@
     <section class="why">
       <div class="row">
         <div class="why-section">
-          <img class="why-section-img" src="assets/images/test1.jpg" alt="test1">
+          <img class="why-section-img" src="assets/images/branding.jpg" alt="branding">
           <div class="why-section-info">
             <h4><span class="why-header">Branding</span>Is Our Niche</h4>
             <p>Want to make your company stand out? We are filled with new ideas and are itching to create something special for you.</p>
           </div>
         </div>
         <div class="why-section">
-          <img class="why-section-img" src="assets/images/test2.jpg" alt="test2">
+          <img class="why-section-img" src="assets/images/survey.jpg" alt="survey">
           <div class="why-section-info">
             <h4><span class="why-header">Custom</span>Design Survey</h4>
             <p>We have created a one of kind survey that is effortless for you and detailed for us. Why make simple complicated?</p>
           </div>
         </div>
         <div class="why-section">
-          <img class="why-section-img" src="assets/images/test3.jpg" alt="test3">
+          <img class="why-section-img" src="assets/images/clock.jpg" alt="clock">
           <div class="why-section-info">
             <h4><span class="why-header">Around</span>The Clock Service</h4>
             <p>Customer first is our motto. We pride ourselves on our turn around time as well as our quality of work.</p>
@@ -85,88 +85,20 @@
         </div>
       </div>
     </section>
-    <section class="process2">
-      <div class="process2-column process2-column-1">
-        <p class="process2-header">How to Create Your Project Easily</p>
+    <!-- 3 step process -->
+    <section class="process">
+      <div class="process-column process-column-1">
+        <p class="process-header">How to Create Your Project Easily</p>
       </div>
-      <div class="process2-column process2-column-2">
-        <p class="process2-title">Create a project with TGJ's free project builder in 3 easy steps.</p>
-        <p class="process2-steps">1. Starting a project with us is easy. Just click on "Start Design" up top to begin.</p>
-        <p class="process2-steps">2. We have several projects for you to pick from. If there's something you need but we don't have, just choose the "other" option.</p>
-        <p class="process2-steps">3. Customize your project by choosing how complex you'd like it as well as the color scheme if you have one. Don't worry, it's optional.</p>
-        <p class="process2-steps">4. Add some information about the project and yourself. We'd like to know as much information as we can to give you the best possible experience.</p>
-        <p class="process2-steps">5. Once you submit then you're done. You can also add more projects if needed. Some of your information will still be there so you don't have to re-type them.</p>
+      <div class="process-column process-column-2">
+        <p class="process-title">Create a project with TGJ's free project builder in 3 easy steps.</p>
+        <p class="process-steps">1. Starting a project with us is easy. Just click on "Start Design" up top to begin.</p>
+        <p class="process-steps">2. We have several projects for you to pick from. If there's something you need but we don't have, just choose the "other" option.</p>
+        <p class="process-steps">3. Customize your project by choosing how complex you'd like it as well as the color scheme if you have one. Don't worry, it's optional.</p>
+        <p class="process-steps">4. Add some information about the project and yourself. We'd like to know as much information as we can to give you the best possible experience.</p>
+        <p class="process-steps">5. Once you submit then you're done. You can also add more projects if needed. Some of your information will still be there so you don't have to re-type them.</p>
       </div>
     </section>
-    <!-- 3 step process -->
-<!--     <section class="process">
-      <div class="row">
-        <div class="process-column">
-          <div class="process-box process-box-1a">
-            <div class="process-step">
-              <img class="process-step-num" src="assets/svg/process_num1.svg" alt="process_num1">
-              <div class="process-step-title">
-                <p>Choose Project</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="process-column">
-          <div class="process-box process-box-1b">
-            <p class="process-box-desc">We provide a variety of projects for you to choose from. Is there something you need but we don't have? No problem. Go to the survey and click the "Other" option.</p>
-          </div>
-        </div>
-        <div class="process-column">
-          <div class="process-box process-box-1c">
-            <img class="process-box-img" src="assets/svg/process_pic1.svg" alt="projects">
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="process-column">
-          <div class="process-box process-box-2a">
-            <div class="process-step">
-              <img class="process-step-num" src="assets/svg/process_num2.svg" alt="process_num2">
-              <div class="process-step-title">
-                <p>Fill Out Survey</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="process-column">
-          <div class="process-box process-box-2b">
-            <p class="process-box-desc">We have spent countless hours to create an easy to use process where you can tell us exactly what you want for your project. Don't know what to say? No worries! You can tell us all about it either in person or over the phone when we contact you.</p>
-          </div>
-        </div>
-        <div class="process-column">
-          <div class="process-box process-box-2c">
-            <img class="process-box-img" src="assets/svg/process_pic2.svg" alt="survey">
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="process-column">
-          <div class="process-box process-box-3a">
-            <div class="process-step">
-              <img class="process-step-num" src="assets/svg/process_num3.svg" alt="process_num3">
-              <div class="process-step-title">
-                <p>Send and Wait</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="process-column">
-          <div class="process-box process-box-3b">
-            <p class="process-box-desc">That's it! You're done. We have received everything that you have filled out. Gives us some time to look over your information and we'll contact you either via email or phone within a one or two business days.</p>
-          </div>
-        </div>
-        <div class="process-column">
-          <div class="process-box process-box-3c">
-            <p>Submit</p>
-          </div>
-        </div>
-      </div>
-    </section> -->
     <!-- FAQ -->
     <section class="faq">
       <div>
@@ -251,8 +183,9 @@
                   <img class="d-block w-100" src="assets/images/carousel2.png" alt="First slide">
                 </div>
                 <div class="col-lg-7 my-auto ml-0">
-                  <p class="clients">Green </p>
-                  <p class="comment">result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); </p>
+                  <p class="clients">The Forest Floor</p>
+                  <p class="comment">The Forest Floor wanted a logo that represents their brand and had the similar feel to the National Forest Sign that we all know and love.</p>
+                  <p class="author">- The Graphic Jar</p>
                 </div>
               </div>
             </div>
